--- a/english.html
+++ b/english.html
@@ -1223,7 +1223,7 @@ Error message and password prompt
 
 <li>Ya</li>
 
-<li>Yeast crantz cake</li>
+<li>Yeast krantz cake</li>
 
 <li>Yeast roses</li>
 
@@ -9087,7 +9087,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200409092645424" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200409154053846" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9096,7 +9096,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The baristas here]] [[From Eyal Shani's kitchen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9116,7 +9116,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200409090638341" title="$:/temp/search">
+<div created="20161023184814872" modified="20200409152713134" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9334,8 +9334,17 @@ With the assistance of the code she has transplanted in my father, in me and in 
 
  &lt;&lt;heblink [[אימא מהאגדות]]&gt;&gt;</pre>
 </div>
-<div created="20200212200933944" modified="20200212201134793" tags="Films" title="A friend">
+<div created="20200212200933944" modified="20200409145754897" tags="Films" title="A friend">
 <pre>[img[pictures/friend.jpg]]
+
+
+!!![[Yoyo]]:
+
+A friend loves you despite of what you are, a friend loves you even when you play it smart, a friend loves you also when you are totally stuck, a friend loves you even when you are fucked up, a friend loves  you also on Friday night.
+
+(Gura drew [[this|https://3.bp.blogspot.com/-ofciR9wlEuQ/WqsF9UH5O2I/AAAAAAAAr4w/ZUUJCbtouXcVXwE3IR9xUPk_qWSdjKZmwCEwYBhgL/s1600/career%2Bgirls00002.png]] drawing out of the wonderful movie [[Career Girls|https://www.imdb.com/title/tt0118818/]] by the sister [[Mike Leigh]])
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[A friend]]&quot;&gt;&gt;
 
@@ -9406,13 +9415,13 @@ These days I’m enjoying [[Fantasy|https://www.youtube.com/watch?v=fdBTWbQEQ2s]
 
  &lt;&lt;heblink [[תרגיל לבלטה]]&gt;&gt;</pre>
 </div>
-<div created="20200223152720731" modified="20200324165410418" tags="[[Here in the Ghetto]] [[Hunky Dory]] Music" title="Abraham Hostel">
+<div created="20200223152720731" modified="20200409110820469" tags="[[Here in the Ghetto]] [[Hunky Dory]] Music" title="Abraham Hostel">
 <pre>[img[pictures/abraham-hostel.jpg]]
 
 !!![[Tomer]]:
 
 
-Two weeks before, my lovely wife bought for her and me tickets to a [[Kutiman|https://kutiman.bandcamp.com/]] show that took place in the end of July at [[Abraham Hostel|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], a place that I always like to visit. In real time she was too tired, and I immediately invited my beloved neighbor (excuse me for the name dropping), [[Yasmin|Jazz]], who performed there couple of months ago with [[Shalosh|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], to come with me, and she was available!! We took a taxi cuz it's hot, and it was hunky dory. 
+Two weeks before, my lovely wife bought for her and me tickets to a [[Kutiman|https://kutiman.bandcamp.com/]] show that took place in the end of July at [[Abraham Hostel|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], a place that I always like to visit. In real time she was too tired, and I immediately invited my beloved neighbor (excuse me for the name dropping), [[Yasmin|Jazz]], who performed there couple of months ago with [[Shalosh|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], to come with me, and she was available!! We took a taxi cuz it's hot, and it was [[hunky dory|Hunky Dory]]. 
 
 
 
@@ -9647,8 +9656,17 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200330165513332" tags="[[The estate]] [[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Baking">
+<div created="20200216150039212" modified="20200409155843349" tags="[[The estate]] [[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
+
+
+!!![[Eva]]:
+
+it’s the best time baking right now because the air is cold, the confectionery loves the cold, and so do I. I woke up this morning ready organisationally and mentally. While I was making coffee I started [[measuring the materials|Misenplation]], mixing the dough that is going to swell up in the fridge for three hours at least. The [[krantz cake’s|Yeast krantz cake]] yeast dough continues to rise in the right moderation even while being out of the fridge. There’s no need to rush to roll out the dough. There’s almost no need to flour the surface on which you are flattening the dough on. The chocolate-butter filling isn’t too soft, so even the flattening of it afterwards is a pleasure, not to mention the weaving of the braids. 
+
+[[Iris]] had taught me this recipe back in the days of [[the estate|The estate]]. The quiet and moderate work, the thought of what comes first and what comes next. The heating of the oven. The sight of the melted chocolate swirling up with the light creme. Syrup bubbles are multiplying and brightening up. Syrup bubbles are browning and caramelizing. Eggs are being whipped with sugar and becoming thick and illuminating froth. Substance that is being poured into forms. A cake is growing taller in the oven. A rustle of a knife being imbedded in a cake and coming out dry. 
+
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[Baking]]&quot;&gt;&gt;
@@ -15350,7 +15368,7 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 
  &lt;&lt;heblink [[יה]]&gt;&gt;</pre>
 </div>
-<div created="20200307173401694" modified="20200307173541719" tags="[[The kitchen by Genevieve]] Recipes Baking [[When they sleep]] [[Food addicts]]" title="Yeast crantz cake">
+<div created="20200307173401694" modified="20200409152802793" tags="[[The kitchen by Genevieve]] Recipes Baking [[When they sleep]] [[Food addicts]]" title="Yeast krantz cake">
 <pre>[img[pictures/shmarim-krantz.jpg]]
 
 
