--- a/index.html
+++ b/index.html
@@ -9211,7 +9211,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מכולת האחים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="אפייה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9231,7 +9231,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200407150507080" title="$:/temp/search">
+<div created="20161023184814872" modified="20200409152835633" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15977,8 +15977,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[What truly happensd at Christmas dinner]]&gt;&gt;</pre>
 </div>
 <div created="20200406152807676" modified="20200408103641432" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
-<pre>
-[img[pictures/eyal-shani.jpg]]
+<pre>[img[pictures/eyal-shani.jpg]]
 
 !!![[תומר]]:
 
@@ -19812,7 +19811,7 @@ Fapina''
 
 &lt;&lt;englink [[Send]]&gt;&gt;</pre>
 </div>
-<div created="20170707184028118" modified="20200307173700683" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="שמרים קרנץ">
+<div created="20170707184028118" modified="20200409152832341" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="שמרים קרנץ">
 <pre>[img[pictures/shmarim-krantz.jpg]]
 
 !!![[ז'נבייב]]:
@@ -19878,7 +19877,7 @@ Fapina''
 
 
 
-&lt;&lt;englink [[Yeast crantz cake]]&gt;&gt;</pre>
+&lt;&lt;englink [[Yeast krantz cake]]&gt;&gt;</pre>
 </div>
 <div created="20170622203416653" modified="20200307173939540" tags="[[חיות אוכל]] מתכונים" title="שניצל">
 <pre>[img[pictures/schnitzel.jpg]]
