--- a/english.html
+++ b/english.html
@@ -9096,7 +9096,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[HaAchims grocery store]] Baking [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11243,13 +11243,13 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 
 </pre>
 </div>
-<div created="20200405105856295" modified="20200405151733392" tags="[[Here in the Ghetto]] [[Food addicts]] [[Corona beings]] Restaurants" title="HaAchims grocery store">
+<div created="20200405105856295" modified="20200409170256077" tags="[[Here in the Ghetto]] [[Food addicts]] [[Corona beings]] Restaurants" title="HaAchims grocery store">
 <pre>[img[pictures/makolet-haachim.jpg]]
 
 
 !!![[Tomer]]:
 
-For a few days I rang with persistency to [[HaAchim]]. I really wanted Hummus, and again and again the phone number was disconnected. I kept on trying for a few days until the recorded message answered and I pressed one, and got the [[link to the exciting online grocery store|https://www.tabitorder.com/?site=5adc4303e98e0717008ce965#/start]], which is a huge coronial invention, and now I’m contented. 
+For a few days I rang with persistency to [[HaAchim]]. I really wanted Hummus, and again and again the phone number was disconnected. I kept on trying for a few days until the recorded message answered and I pressed one, and got the [[link to the exciting online grocery store|https://www.tabitorder.com/?site=5adc4303e98e0717008ce965#/start]], which is a huge coronial invention, and now I’m content. 
 
 
 
