--- a/english.html
+++ b/english.html
@@ -9096,7 +9096,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[HaAchims grocery store]] Baking [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Palms of the hands]] [[HaAchims grocery store]] Baking [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9116,7 +9116,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200409152713134" title="$:/temp/search">
+<div created="20161023184814872" modified="20200409171854857" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12943,7 +12943,7 @@ Here in the [[archive|The archive's trustees]] we add from time to time, with lo
 
  &lt;&lt;heblink [[עגבניות בתנור]]&gt;&gt;</pre>
 </div>
-<div created="20200330154701754" modified="20200402152911564" tags="[[A friend]] [[Iry claims]]" title="Palms of the hands">
+<div created="20200330154701754" modified="20200409171851601" tags="[[A friend]] [[Iry claims]]" title="Palms of the hands">
 <pre>[img[pictures/palms.jpg]]
 
 
@@ -12955,7 +12955,7 @@ The palms of the hands are [[these two sweet|https://en.wikipedia.org/wiki/Hand]
 
 The hands have their own wisdom and sometimes they guide us without us noticing to good and better places than we would go by ourselves. It happens quite often that they guide me to the kitchen, they take out a piece of fish from the fridge, I then burn it on the pan, place it on a plate and finish by garnishing it with leaflets. 
 
-“Why are you garnishing it?” My head asks. That’s interesting, I notice. “It’s both pretty and adds some taste to the fish.” My hands answer. Without those sorts of explanations like in the reality chefs, that the crunchiness of the leaflets together with the crispiness of the fish blow up inside the mouth like love at first site.
+“Why are you garnishing it?” My head asks. That’s interesting, I notice. “It’s both pretty and adds some taste to the fish.” My hands answer. Without those sorts of explanations like in the reality chefs, that the crunchiness of the leaflets together with the crispiness of the fish blow up inside the mouth like Love at first site.
 
 That’s why I love the palms of my hands, they don’t feed me shit. 
 
