--- a/english.html
+++ b/english.html
@@ -9096,7 +9096,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Palms of the hands]] [[HaAchims grocery store]] Baking [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[To draw]] [[Palms of the hands]] [[HaAchims grocery store]] Baking [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9116,7 +9116,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200409171854857" title="$:/temp/search">
+<div created="20161023184814872" modified="20200409172824589" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14655,13 +14655,13 @@ The TLV is totally here in the ghetto, at the triangle between Ha Hashmonaim, Ca
 
  &lt;&lt;heblink [[TLV]]&gt;&gt;</pre>
 </div>
-<div created="20200215225422814" modified="20200331153150736" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]] [[Palms of the hands]]" title="To draw">
+<div created="20200215225422814" modified="20200409173129755" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]] [[Palms of the hands]]" title="To draw">
 <pre>[img[pictures/lezayer.jpg]]
 
 
 !!![[Gura]]:
 
-[[Karl Ove|Karl Ove Knausgard]] is affecting me too. There are moments when his words are actually like paintings. He is speaking about life and by the way of doing so, among other things he speaks of painters, paintings, views and landscapes. He speaks patiently and clearly about every single thing. I too, aspire to be thought of as [[a writer|Searching for Iry]], but now: I write and draw on A4 Bristol papers, and use oil coloured pencils. I only draw for the website, and if I have nothing to draw I find something. I choose what to draw, sometimes I collect a few photographs that I took, or pictures from search engines, and add them up for one single picture. I take a head from here, and a room from there. After I finish drawing with a pencil I colour it - this is the most joyful thing for me. Adding colour to another colour. Colours have always hypnotized me like sounds, and when they are together they are like music - up lifting. It’s not that it’s easy for me to draw, though I am not suffering while doing it either, it’s just that there are moments when my head is distorting from the inside from the effort. The results being far from those that I have planned or wanted, and still this is what I most want to be doing. 
+[[Karl Ove|Karl Ove Knausgard]] is affecting me too. There are moments when his words are actually like paintings. He is speaking about life and by the way of doing so, among other things he speaks of painters, paintings, views and landscapes. He speaks patiently and clearly about every single thing. I too, aspire to be thought of as [[a writer|Searching for Iry]], but now: I write and draw on A4 Bristol papers, and use oil based colour pencils. I only draw for the website, and if I have nothing to draw I find something. I choose what to draw, sometimes I collect a few photographs that I took, or pictures from search engines, and add them up for one single picture. I take a head from here, and a room from there. After I finish drawing with a pencil I colour it - this is the most joyful thing for me. Adding colour to another colour. Colours have always hypnotized me like sounds, and when they are together they are like music - up lifting. It’s not that it’s easy for me to draw, though I am not suffering while doing it either, it’s just that there are moments when my head is distorting from the inside from the effort. The results being far from those that I have planned or wanted, and still this is what I most want to be doing. 
 
 
 
