--- a/index.html
+++ b/index.html
@@ -9211,7 +9211,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אפייה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לורין היל]] [[כתב התנועה אשכול-וכמן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9231,7 +9231,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200409152835633" title="$:/temp/search">
+<div created="20161023184814872" modified="20200410114841302" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13366,8 +13366,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[A friend]]&gt;&gt;</pre>
 </div>
-<div created="20180328131528706" modified="20200225170505737" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חוה אלברשטיין">
+<div created="20180328131528706" modified="20200410104239645" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
+
+
+!!![[הצוות]]:
+
 
 [[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%97%D7%95%D7%95%D7%94.bmp]] התמונה המקורית ממנה גורה ציירה את [[חוה|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%94_%D7%90%D7%9C%D7%91%D7%A8%D7%A9%D7%98%D7%99%D7%99%D7%9F]] שנולדה בשם אווה. היא [[שרה עם גיטרה|https://www.youtube.com/watch?v=MqBu-lEPKWg]]: 
 
@@ -13582,7 +13586,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170506201817983" modified="20200226101754094" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חנות דיסקים">
+<div created="20170506201817983" modified="20200410105228693" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חנות דיסקים">
 <pre>[img[pictures/music-house.jpg]]
 
 !!![[גורה]]:
@@ -13592,7 +13596,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;englink [[Disk store]]&gt;&gt;</pre>
+&lt;&lt;englink [[Cd store]]&gt;&gt;</pre>
 </div>
 <div created="20170711174005898" modified="20200324163701714" tags="סדרות [[אחיות חוץ]] טלוויזיה [[האנקי דורי]]" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
@@ -15114,12 +15118,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Crust dough extras 2]]&gt;&gt;</pre>
 </div>
-<div created="20180508163939540" modified="20200330164206373" tags="[[אירי טוענת]] [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="כתב התנועה אשכול-וכמן">
+<div created="20180508163939540" modified="20200410114533059" tags="[[אירי טוענת]] [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="כתב התנועה אשכול-וכמן">
 <pre>[img[pictures/ctav-tnua.jpg]]
 
 !!![[אירי]]:
 
-[[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%A0%D7%A2%D7%94%20%D7%90%D7%A9%D7%9B%D7%95%D7%9C%20%D7%91%D7%99%D7%92.bmp]] התמונה ממנה גורה ציירה את הציור, בו רואים את להקת &quot;ריקודי חדר&quot; של  [[נעה אשכול|https://he.wikipedia.org/wiki/%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C]], שהייתה למעשה אומנית חוקרת תנועה, ויצרה עם תלמידה [[אברהם וכמן|https://he.wikipedia.org/wiki/%D7%90%D7%91%D7%A8%D7%94%D7%9D_%D7%95%D7%9B%D7%9E%D7%9F]] את [[כתב התנועה אשכול- וכמן|https://he.wikipedia.org/wiki/%D7%9B%D7%AA%D7%91_%D7%94%D7%AA%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C-%D7%95%D7%9B%D7%9E%D7%9F]]. את  האטיודים שנובעים מהכתב מבצעים גם היום לקול מטרונום [[חברי הלהקה|https://www.youtube.com/watch?v=-C1tJdlXRRg]], שעבדו עימה לאורך שנים ארוכות בביתה בחולון, שם גם יצרה משאריות בדים [[שטיחי קיר|http://www.hetzroni.com/noa-rugs/noa_rugs.php]] מלאי כיוונים. הבית הלהקה והכתב [[ממשיכים|http://noaeshkol.org/]] ואני מעריצה את [[רחלי נול כהנא|http://info.smkb.ac.il/home/home.exe/45079/65721]]
+[[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%A0%D7%A2%D7%94%20%D7%90%D7%A9%D7%9B%D7%95%D7%9C%20%D7%91%D7%99%D7%92.bmp]] התמונה ממנה גורה ציירה את הציור, בו רואים את להקת &quot;ריקודי חדר&quot; של  [[נעה אשכול|https://he.wikipedia.org/wiki/%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C]], שהייתה למעשה אומנית חוקרת תנועה, ויצרה עם תלמידה [[אברהם וכמן|https://he.wikipedia.org/wiki/%D7%90%D7%91%D7%A8%D7%94%D7%9D_%D7%95%D7%9B%D7%9E%D7%9F]] את [[כתב התנועה אשכול- וכמן|https://he.wikipedia.org/wiki/%D7%9B%D7%AA%D7%91_%D7%94%D7%AA%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C-%D7%95%D7%9B%D7%9E%D7%9F]]. את  האטיודים שנובעים מהכתב מבצעים גם היום לקול מטרונום [[חברי הלהקה|https://www.youtube.com/watch?v=-C1tJdlXRRg]], שעבדו עימה לאורך שנים ארוכות בביתה בחולון, שם גם יצרה משאריות בדים [[שטיחי קיר|http://www.hetzroni.com/noa-rugs/noa_rugs.php]] מלאי כיוונים. הבית הלהקה והכתב [[ממשיכים|http://noaeshkol.org/]] ואני מעריצה את [[רחלי נול כהנא|https://www.youtube.com/watch?v=tTXTH4lOO-I]]
 
 
 
