--- a/english.html
+++ b/english.html
@@ -9096,7 +9096,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Yehonatan Geffen]] [[From Eyal Shani's kitchen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9116,7 +9116,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200410115600114" title="$:/temp/search">
+<div created="20161023184814872" modified="20200410120437837" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15481,15 +15481,15 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
  &lt;&lt;heblink [[שושני שמרים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217131804519" modified="20200410112932900" tags="Music [[Outer sisters]] [[How many songs can you even invent at all]]" title="Yehonatan Geffen">
+<div created="20200217131804519" modified="20200410121230658" tags="Music [[Outer sisters]] [[How many songs can you even invent at all]]" title="Yehonatan Geffen">
 <pre>[img[pictures/yonatan-gefen.jpg]]
 
 
 !!![[Yoyo]]:
 
-Gura painted [[Yehonatan Geffen|https://en.wikipedia.org/wiki/Yehonatan_Geffen]], the artist who affected me so much, by [[this picture|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]]. Songs that Anat especially loves. Stories that Anat especially loves. The stars are the kids of the moon. Baby teeth. Dear mom. How is a song born. Taking my time. [[You can rest, Don Quixote|https://www.youtube.com/watch?v=Z1OPyecbGCI]]. A whole story about one cat. And many many more. Cause with the uzi and the canteen- him being a Druse couldn’t be seen 
+Gura painted [[Yehonatan Geffen|https://en.wikipedia.org/wiki/Yehonatan_Geffen]], the artist who affected me so much, by [[this picture|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]]. Songs that Anat especially loves. Stories that Anat especially loves. The stars are the kids of the moon. Baby teeth. Precious mom. How is a song born. Taking my time. [[You can rest, Don Quixote|https://www.youtube.com/watch?v=Z1OPyecbGCI]]. A whole story about one cat. And many many more. Cause with the uzi and the canteen- him being a Druse couldn’t be seen 
 
-Maybe the [[Sixteenth Sheep|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]] is his [[Big Lebowski|The Big Lebowski]]]] in a way that before and after [[they|Ethan and Joel Coen]] always make great movies with a unique X-factor, and yet in the Sixteenth Sheep a onetime thing that touched everybody had happened. My heart goes out for the Coen Brothers, for not growing up on Yehonatan Geffen, [[the telling man|https://www.youtube.com/watch?v=CJmMpc0lo1c]].
+Maybe the [[Sixteenth Sheep|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]] is his [[Big Lebowski|The Big Lebowski]] in a way that before and after [[they|Ethan and Joel Coen]] always make great movies with a unique X-factor, and yet in the Sixteenth Sheep a onetime thing that touched everybody had happened. My heart goes out for the Coen Brothers, for not growing up on Yehonatan Geffen, [[the telling man|https://www.youtube.com/watch?v=CJmMpc0lo1c]].
 
 [[And that’s all for now|https://www.youtube.com/watch?v=ixl8xKyv-8E&amp;index=3&amp;list=PLXhoL6TJUCjYLAo1mw50eUrj5JrdEEoqC]] (for now, that’s all)
 
