lehamim an corona

--- a/english.html
+++ b/english.html
@@ -671,6 +671,8 @@ Error message and password prompt
 
 <li>Lehamim</li>
 
+<li>Lehamim and corona</li>
+
 <li>Lemon cookies</li>
 
 <li>Lemons</li>
@@ -9096,7 +9098,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[True blood]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Lehamim and corona]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10869,8 +10871,7 @@ There aren't enough words or space to describe the wonder of him and of the whol
 </pre>
 </div>
 <div created="20200406162758765" modified="20200410094510666" tags="[[True stories]] [[The archive's trustees]]" title="Fapina">
-<pre>
-!!![[Yoyo]]:
+<pre>!!![[Yoyo]]:
 
 ''Fapina''
 
@@ -12023,6 +12024,16 @@ That what happens when a man follows the [[Jazz]]- he arrives 10 Mikve Israel an
 
 </pre>
 </div>
+<div created="20200410161820933" modified="20200410164327845" tags="[[Here in the Ghetto]] [[Corona beings]] Baking [[Coffee shops]] Kitchens" title="Lehamim and corona">
+<pre>[img[pictures/lehamim-bacorona.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[לחמים בקורונה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200216144801309" modified="20200216145115733" tags="Recipes Baking [[Food addicts]]" title="Lemon cookies">
 <pre>[img[pictures/ugiyot-limon.jpg]]
 
@@ -12720,7 +12731,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200410115339098" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200410162013681" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 
@@ -14832,7 +14843,7 @@ If death is inevitable, let it be in [[Treme|https://www.imdb.com/title/tt127997
 
  &lt;&lt;heblink [[TREME]]&gt;&gt;</pre>
 </div>
-<div created="20200216152327999" modified="20200410123220851" tags="TV [[TV Series]] [[Food addicts]] [[How many songs can you even invent at all]] [[Hunky Dory]]" title="True blood">
+<div created="20200216152327999" modified="20200410135350865" tags="TV [[TV Series]] [[Food addicts]] [[How many songs can you even invent at all]] [[Hunky Dory]]" title="True blood">
 <pre>[img[pictures/true-blood.jpg]]
 
 
