--- a/index.html
+++ b/index.html
@@ -905,6 +905,8 @@ Error message and password prompt
 
 <li>לחמים</li>
 
+<li>לחמים בקורונה</li>
+
 <li>לייף סטייל</li>
 
 <li>ליל הדובונאז'</li>
@@ -9202,7 +9204,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200330165057621" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200408103639546" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200410165042130" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9211,7 +9213,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לורין היל]] [[כתב התנועה אשכול-וכמן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לחמים בקורונה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9231,7 +9233,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200410114841302" title="$:/temp/search">
+<div created="20161023184814872" modified="20200410123010070" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15366,6 +15368,20 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Lehamim]]&gt;&gt;</pre>
 </div>
+<div created="20200410153607387" modified="20200410165337420" tags="[[כאן בגטו]] [[בתי קפה]] [[הלכות קורונה]] אפייה מטבחים" title="לחמים בקורונה">
+<pre>[img[pictures/lehamim-bacorona.jpg]]
+
+
+!!![[תומר]]:
+
+בכל פעם שאני יורד למטה למשולש הקרוב בימים האלה, לבי מחסיר פעימה. [[הרחובות כמעט ריקים|https://www.youtube.com/watch?v=J6YLzuhIpSE]], אנשים עם מסכות וכפפות הולכים מהר וממעטים להסתכל לך בעיניים. אני זקוק לקשר הזה. אני ממשיך ורואה את הדלת המוגפת של בלינדה, נזכר בה ומתגעגע. עוד כמה פסיעות ואני בתור של [[לחמים]], שם עיניים מוכרות מאירות אלי, אני רוצה לצלם כדי לשלוח תמונה [[לגורה|גורה]] שתצייר, ומקבל המלצה להיכנס פנימה ולצלם את אזור בית הקפה, שהפך לבית אריזה מוקפד. מצלם אותו, שולח, מבקש מעובדי הדלפק, כי עכשיו אסור לקחת לבד, קינמונים וגביניות ולחמניות עם שומשום, משלם דרך הכפפות, לא יודע מה זה אומר לגבי נקיון כרטיס האשראי והארנק אליו הוא נכנס, ויוצא אל הרחוב הקר שוב.
+
+
+
+
+&lt;&lt;englink [[Lehamim and corona]]&gt;&gt;
+</pre>
+</div>
 <div created="20161114183334957" modified="20200322161758347" tags="בתים" title="לייף סטייל">
 <pre>[img[pictures/lifestyle.jpg]]
 
@@ -16636,7 +16652,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20180604190242526" modified="20200406162909899" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="מתכונים">
+<div created="20180604190242526" modified="20200410162129701" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="מתכונים">
 <pre>[img[pictures/matconim.jpg]]
 
 !!![[אירי]]:
