--- a/index.html
+++ b/index.html
@@ -15368,13 +15368,13 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Lehamim]]&gt;&gt;</pre>
 </div>
-<div created="20200410153607387" modified="20200410165337420" tags="[[כאן בגטו]] [[בתי קפה]] [[הלכות קורונה]] אפייה מטבחים" title="לחמים בקורונה">
+<div created="20200410153607387" modified="20200410165602546" tags="[[כאן בגטו]] [[בתי קפה]] [[הלכות קורונה]] אפייה מטבחים" title="לחמים בקורונה">
 <pre>[img[pictures/lehamim-bacorona.jpg]]
 
 
 !!![[תומר]]:
 
-בכל פעם שאני יורד למטה למשולש הקרוב בימים האלה, לבי מחסיר פעימה. [[הרחובות כמעט ריקים|https://www.youtube.com/watch?v=J6YLzuhIpSE]], אנשים עם מסכות וכפפות הולכים מהר וממעטים להסתכל לך בעיניים. אני זקוק לקשר הזה. אני ממשיך ורואה את הדלת המוגפת של בלינדה, נזכר בה ומתגעגע. עוד כמה פסיעות ואני בתור של [[לחמים]], שם עיניים מוכרות מאירות אלי, אני רוצה לצלם כדי לשלוח תמונה [[לגורה|גורה]] שתצייר, ומקבל המלצה להיכנס פנימה ולצלם את אזור בית הקפה, שהפך לבית אריזה מוקפד. מצלם אותו, שולח, מבקש מעובדי הדלפק, כי עכשיו אסור לקחת לבד, קינמונים וגביניות ולחמניות עם שומשום, משלם דרך הכפפות, לא יודע מה זה אומר לגבי נקיון כרטיס האשראי והארנק אליו הוא נכנס, ויוצא אל הרחוב הקר שוב.
+בכל פעם שאני יורד למטה למשולש הקרוב בימים האלה, לבי מחסיר פעימה. [[הרחובות כמעט ריקים|https://www.youtube.com/watch?v=J6YLzuhIpSE]], אנשים עם מסכות וכפפות הולכים מהר וממעטים להסתכל לך בעיניים. אני זקוק לקשר הזה. אני ממשיך ורואה את הדלת המוגפת של בלינדה, נזכר בה ומתגעגע. עוד כמה פסיעות ואני בתור של [[לחמים]], שם עיניים מוכרות מאירות אלי. אני רוצה לצלם כדי לשלוח תמונה [[לגורה|גורה]] שתצייר, ומקבל המלצה להיכנס פנימה ולצלם את אזור בית הקפה, שהפך לבית אריזה מוקפד. מצלם אותו, שולח, מבקש מעובדי הדלפק, כי עכשיו אסור לקחת לבד, קינמונים וגביניות ולחמניות עם שומשום, משלם דרך הכפפות, לא יודע מה זה אומר לגבי נקיון כרטיס האשראי והארנק אליו הוא נכנס, ויוצא אל הרחוב הקר שוב.
 
 
 
