--- a/english.html
+++ b/english.html
@@ -457,6 +457,8 @@ Error message and password prompt
 
 <li>Downton Abbey</li>
 
+<li>Draft of 'Wes Anderson'</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Drinking with Gura</li>
@@ -9089,7 +9091,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200410114709591" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200411144054087" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9098,7 +9100,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Lehamim and corona]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Ran Yagil]] [[Draft of 'Wes Anderson']] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9118,7 +9120,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200410120437837" title="$:/temp/search">
+<div created="20161023184814872" modified="20200411144045293" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10643,6 +10645,19 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
 
  &lt;&lt;heblink [[אחוזת דאונטון]]&gt;&gt;
+</pre>
+</div>
+<div created="20200213175731975" draft.of="Wes Anderson" draft.title="Wes Anderson" modified="20200411143947187" tags="[[Outer sisters]] Films [[Hunky Dory]]" title="Draft of 'Wes Anderson'">
+<pre>[img[pictures/wes-anderson.jpg]]
+
+
+!!![[Gura]]:
+
+I love [[Wes Anderson|https://www.imdb.com/name/nm0027572/]], because he always makes me laugh and makes me happy. Almost every frame of him is surprising, full of imagination, beautiful, smart and symmetric- which is [[the most important|Comprehensive or compulsive]].
+
+
+ &lt;&lt;heblink [[וס אנדרסון]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200202160144751" modified="20200217131317059" tags="[[The team]] Children" title="Dreams that we've dreamt">
@@ -13348,11 +13363,11 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 
  &lt;&lt;heblink [[רפי מינץ]]&gt;&gt;</pre>
 </div>
-<div created="20200225182024426" modified="20200410120043267" tags="[[Outer sisters]] [[A friend]] [[How many songs can you even invent at all]]" title="Ran Yagil">
+<div created="20200225182024426" modified="20200411144037238" tags="[[Outer sisters]] [[A friend]] [[How many songs can you even invent at all]]" title="Ran Yagil">
 <pre>[img[pictures/rani.jpg]]
 
 
-!!![[Jazz’s mom]]:
+!!![[Jazz's mom]]:
 
 [[Gura]] tried to paint [[Ran Yagil|https://peoplepill.com/people/ran-yagil/]] by [[this picture|https://i.ytimg.com/vi/IPMJ1ptECSk/maxresdefault.jpg]]. He is an author, editor, linguist,  publisher, criticizer, a man with [[stance|https://he.wikipedia.org/wiki/%D7%A2%D7%9E%D7%93%D7%94_(%D7%9B%D7%AA%D7%91_%D7%A2%D7%AA_%D7%A1%D7%A4%D7%A8%D7%95%D7%AA%D7%99)]], and a beloved sister. 
 
@@ -14999,7 +15014,7 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
 
  &lt;&lt;heblink [[נולדנו]]&gt;&gt;</pre>
 </div>
-<div created="20200213175731975" modified="20200324172549464" tags="[[Outer sisters]] Films [[Hunky Dory]]" title="Wes Anderson">
+<div created="20200213175731975" modified="20200411140329756" tags="[[Outer sisters]] Films [[Hunky Dory]]" title="Wes Anderson">
 <pre>[img[pictures/wes-anderson.jpg]]
 
 
